--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -3,15 +3,15 @@
   amazon.aws.ec2_instance_info:
     instance_ids:
       - "{{ deploy_flask_app_bastion_instance_id }}"
-  register: bastion_info
+  register: deploy_flask_app__bastion_info
 
 - name: Set common variables to be used later
   ansible.builtin.set_fact:
-    deploy_flask_app__resource_prefix: "{{ bastion_info.instances.0.public_dns_name | split('.') | first }}"
-    deploy_flask_app__group_id: "{{ bastion_info.instances.0.security_groups[0].group_id }}"
-    deploy_flask_app__vm_image_id: "{{ bastion_info.instances.0.image_id }}"
-    deploy_flask_app__bastion_public_ip: "{{ bastion_info.instances.0.public_ip_address }}"
-    deploy_flask_app__public_subnet_id: "{{ bastion_info.instances.0.subnet_id }}"
+    deploy_flask_app__resource_prefix: "{{ deploy_flask_app__bastion_info.instances.0.public_dns_name | split('.') | first }}"
+    deploy_flask_app__group_id: "{{ deploy_flask_app__bastion_info.instances.0.security_groups[0].group_id }}"
+    deploy_flask_app__vm_image_id: "{{ deploy_flask_app__bastion_info.instances.0.image_id }}"
+    deploy_flask_app__bastion_public_ip: "{{ deploy_flask_app__bastion_info.instances.0.public_ip_address }}"
+    deploy_flask_app__public_subnet_id: "{{ deploy_flask_app__bastion_info.instances.0.subnet_id }}"
 
 - name: Set variable for key pair and bastion hostname
   ansible.builtin.set_fact:
@@ -29,14 +29,14 @@
 - name: Create key pair to connect to the workers
   amazon.aws.ec2_key:
     name: "{{ deploy_flask_app__workers_keypair_name }}"
-  register: keypair_result
+  register: deploy_flask_app__keypair_result
 
 - name: Save key pair content into file on bastion host
   ansible.builtin.copy:
-    content: "{{ keypair_result.key.private_key }}"
+    content: "{{ deploy_flask_app__keypair_result.key.private_key }}"
     dest: "{{ deploy_flask_app_workers_ssh_private_key }}"
     mode: 0600
-  when: keypair_result is changed
+  when: deploy_flask_app__keypair_result is changed
   delegate_to: "{{ deploy_flask_app__bastion_hostname }}"
 
 - name: Create workers instances
