--- a/roles/manage_ec2_instance/tasks/ec2_instance_delete_operations.yml
+++ b/roles/manage_ec2_instance/tasks/ec2_instance_delete_operations.yml
@@ -4,23 +4,23 @@
     filters:
       tag:Name: "{{ manage_ec2_instance_instance_name }}"
       instance-state-name: ["pending", "running", "stopping", "stopped"]
-  register: ec2_info_result
+  register: manage_ec2_instance__ec2_info_result
 
 - name: Disassociate and release EIP if present
-  when: ec2_info_result.instances | length > 0
+  when: manage_ec2_instance__ec2_info_result.instances | length > 0
   # and ec2_info_result.instances[0].network_interfaces.association.public_ip is defined
   amazon.aws.ec2_eip:
-    device_id: "{{ ec2_info_result.instances[0].instance_id }}"
+    device_id: "{{ manage_ec2_instance__ec2_info_result.instances[0].instance_id }}"
     state: absent
     release_on_disassociation: true
 
 - name: Terminate EC2 Instance if present
-  when: ec2_info_result.instances | length > 0
+  when: manage_ec2_instance__ec2_info_result.instances | length > 0
   amazon.aws.ec2_instance:
     state: terminated
     wait: "{{ manage_ec2_instance_wait_for_state }}"
     instance_ids:
-      - "{{ ec2_info_result.instances[0].instance_id }}"
+      - "{{ manage_ec2_instance__ec2_info_result.instances[0].instance_id }}"
 
 - name: Delete keypair if provided
   when: manage_ec2_instance_key_name is defined and manage_ec2_instance_key_name | length > 0
